--- a/spring-6-rest-mvc/src/main/resources/application-localmysql.properties
+++ b/spring-6-rest-mvc/src/main/resources/application-localmysql.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/restdb?useUnicode=true&charact
 spring.jpa.database=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernete.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 #show sql
 
