--- a/spring-6-rest-mvc/src/main/resources/application.properties
+++ b/spring-6-rest-mvc/src/main/resources/application.properties
@@ -3,6 +3,9 @@ logging.level.guru.springframework=debug
 spring.flyway.enabled=false
 spring.docker.compose.enabled=false
 
+spring.security.user.name=user1
+spring.security.user.password=123456
+
 
 
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
