--- a/spring-6-rest-mvc/src/main/resources/application.properties
+++ b/spring-6-rest-mvc/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.application.name=spring-6-rest-mvc
 logging.level.guru.springframework=debug
 spring.flyway.enabled=false
-spring.docker.compose.enabled=false
 
-spring.security.user.name=user1
-spring.security.user.password=123456
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
 
-
+#logging.level.org.springframework.security=trace
 
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-source=metadata
