reactive-mongo webflux fn(oauth2)

--- a/spring-6-reactive-mongo/src/main/resources/application.properties
+++ b/spring-6-reactive-mongo/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.data.mongodb.password=zirael#43#
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=reactive_mongo
 spring.data.mongodb.host=localhost
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
