--- a/spring-6-reactive/src/main/resources/application.properties
+++ b/spring-6-reactive/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=spring-6-reactive-R2DBC
 
 ##logging.level.org.springframework.r2dbc=trace
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
+server.port=8082
