Update changes (gateway mvc)

--- a/spring-6-rest-mvc/src/main/resources/application.properties
+++ b/spring-6-rest-mvc/src/main/resources/application.properties
@@ -2,6 +2,9 @@ spring.application.name=spring-6-rest-mvc
 logging.level.guru.springframework=debug
 spring.flyway.enabled=false
 
+#puerto en el que correra la app spring boot
+server.port=8081
+
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
 
 #logging.level.org.springframework.security=trace
