--- a/spring-6-rest-mvc/pom.xml
+++ b/spring-6-rest-mvc/pom.xml
@@ -29,6 +29,9 @@
     <properties>
         <java.version>17</java.version>
         <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
+        <logbook.version>3.8.0</logbook.version>
+        <logstash-logback-encoder-version>7.4</logstash-logback-encoder-version>
+
     </properties>
 
     <repositories>
@@ -144,6 +147,27 @@
             <artifactId>swagger-request-validator-restassured</artifactId>
             <version>2.42.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>logbook-spring-boot-starter</artifactId>
+            <version>${logbook.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${logstash-logback-encoder-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>logbook-logstash</artifactId>
+            <version>${logbook.version}</version>
         </dependency>
 
     </dependencies>
