--- a/spring-6-rest-mvc/src/main/resources/application.properties
+++ b/spring-6-rest-mvc/src/main/resources/application.properties
@@ -7,6 +7,11 @@ server.port=8081
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
 
+management.endpoint.health.probes.enabled=true
+management.health.readinessstate.enabled=true
+management.health.livenessstate.enabled=true
+logging.level.org.zalando.logbook=trace 
+
 #logging.level.org.springframework.security=trace
 
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
