reactive-mongo actuator-logbook

--- a/spring-6-reactive-mongo/src/main/resources/application.properties
+++ b/spring-6-reactive-mongo/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.data.mongodb.host=localhost
 server.port=8083
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
+
+management.endpoint.health.probes.enabled=true
+management.health.readinessstate.enabled=true
+management.health.livenessstate.enabled=true
