--- a/spring-6-reactive-mongo/pom.xml
+++ b/spring-6-reactive-mongo/pom.xml
@@ -113,6 +113,11 @@
 			<artifactId>spring-security-test</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
