--- a/spring-6-auth-server/pom.xml
+++ b/spring-6-auth-server/pom.xml
@@ -63,6 +63,12 @@
 			<artifactId>spring-security-oauth2-authorization-server</artifactId>
 			<version>1.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
