--- a/spring-6-rest-mvc/src/main/resources/application.properties
+++ b/spring-6-rest-mvc/src/main/resources/application.properties
@@ -1,17 +1,15 @@
 spring.application.name=spring-6-rest-mvc
 logging.level.guru.springframework=debug
 spring.flyway.enabled=false
-
-#puerto en el que correra la app spring boot
 server.port=8081
-
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
-
+spring.profiles.active=localmysql
 management.endpoint.health.probes.enabled=true
 management.health.readinessstate.enabled=true
 management.health.livenessstate.enabled=true
 logging.level.org.zalando.logbook=trace 
 
+spring.cache.cache-names=beerCache,beerListCache,customerCache,customerListCache
 #logging.level.org.springframework.security=trace
 
 #spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=drop-and-create
