--- a/spring-6-restclient/pom.xml
+++ b/spring-6-restclient/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<logbook-version>3.8.0</logbook-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -37,6 +38,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>logbook-spring</artifactId>
+			<version>${logbook-version}</version>
 		</dependency>
 
 		<dependency>
