--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,18 @@
 
     <properties>
         <java.version>21</java.version>
+        <logbook.version>3.8.0</logbook.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>logbook-spring</artifactId>
+            <version>${logbook.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
