webclient with reactive(webfluxfn) logbook

--- a/spring-6-webclient-webfluxfn/src/main/resources/application.properties
+++ b/spring-6-webclient-webfluxfn/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=spring-6-webclient-webfluxfn
 
-webclient.rooturl=http://localhost:8080
+webclient.rooturl=http://localhost:8083
 spring.security.oauth2.client.provider.springauth.token-uri=http://localhost:9000/oauth2/token
 
 spring.security.oauth2.client.registration.springauth.client-name=springauth
@@ -10,3 +10,5 @@ spring.security.oauth2.client.registration.springauth.scope[0]=message.read
 spring.security.oauth2.client.registration.springauth.scope[1]=message.write
 spring.security.oauth2.client.registration.springauth.authorization-grant-type=client_credentials
 spring.security.oauth2.client.registration.springauth.provider=springauth
+
+logging.level.org.zalando.logbook=trace
