--- a/spring-6-webclient-webfluxfn/pom.xml
+++ b/spring-6-webclient-webfluxfn/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<logbook.webflux.version>3.8.0</logbook.webflux.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -38,6 +39,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>logbook-spring-webflux</artifactId>
+			<version>${logbook.webflux.version}</version>
 		</dependency>
 
 		<dependency>
