rest mvc events for auditing

--- a/spring-6-rest-mvc/src/main/resources/application.properties
+++ b/spring-6-rest-mvc/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=spring-6-rest-mvc
-logging.level.guru.springframework=debug
+logging.level.course.spring.spring_6_rest_mvc=debug
 spring.flyway.enabled=false
 server.port=8081
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
