--- a/spring-6-reactive-mongo/src/main/resources/application.properties
+++ b/spring-6-reactive-mongo/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.database=reactive_mongo
 spring.data.mongodb.host=localhost
 server.port=8083
+sfg.mongohost=localhost
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
 
 management.endpoint.health.probes.enabled=true
