rest-mvc docker(iamges and containers)

--- a/spring-6-rest-mvc/src/main/resources/application.properties
+++ b/spring-6-rest-mvc/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=spring-6-rest-mvc
 logging.level.course.spring.spring_6_rest_mvc=debug
 spring.flyway.enabled=false
-server.port=8081
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9000
+
+#nota -> esta linea es necesaria para que la imagen de rest-mvc solicite el token a el auth-server en docker
+#tambien puede hacerse via comando desde la terminal
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-server:9000
+
 spring.profiles.active=localmysql
 management.endpoint.health.probes.enabled=true
 management.health.readinessstate.enabled=true
