--- a/spring-6-rest-mvc/src/main/resources/application-localmysql.properties
+++ b/spring-6-rest-mvc/src/main/resources/application-localmysql.properties
@@ -1,7 +1,13 @@
 
+server.port=8081
 spring.datasource.username=restadmin
 spring.datasource.password=password
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/restdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+
+#nota -> esta linea es necesaria para que la conexion a la base de datos en el localhost funcione debido
+#a que para docker localhost apunta a otra direccion (tambien puede hacerse via comando desde la terminal)
+#spring.datasource.url=jdbc:mysql://host.docker.internal:3306/restdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+
 spring.jpa.database=mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
