rest-6-rest-mvc-api and change imports in rest-mvc

--- a/spring-6-rest-mvc/pom.xml
+++ b/spring-6-rest-mvc/pom.xml
@@ -131,8 +131,8 @@
         </dependency>
 
         <dependency>
-            <groupId>guru.spring</groupId>
-            <artifactId>spring-6-rest-mvc-api</artifactId>
+            <groupId>guru.springframework</groupId>
+            <artifactId>spring6restmvcapi</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
